--- a/app/src/main/res/layout/content_add_event.xml
+++ b/app/src/main/res/layout/content_add_event.xml
@@ -1,20 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="vertical">
 
-    <EditText
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/text_input_layout"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/txtEventDescription" />
+        android:layout_height="wrap_content">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:hint="Event description"
+            android:id="@+id/txtEventDescription" />
+
+    </android.support.design.widget.TextInputLayout>
+
 
     <DatePicker
         android:id="@+id/datePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scaleY="0.9"
         />
 
 </LinearLayout>
